--- a/.github/workflow/qa-pipeline.yml
+++ b/.github/workflow/qa-pipeline.yml
@@ -1,4 +1,20 @@
-on
+on:
   push:
-    -  main
-    
+    branches:
+      - main
+      paths-ignore:
+        - '.github/workflows/**'
+
+
+jobs:
+  build:
+    runs-on: windows-latest
+    steps:
+      - name: Check out the repository to the runner
+        uses: actions/checkout@v4
+      - name: pre-requisites Installation
+        run: 
+        
+      
+        
+        
