--- a/.github/workflow/qa-pipeline.yml
+++ b/.github/workflow/qa-pipeline.yml
@@ -8,12 +8,21 @@ on:
 
 jobs:
   build:
+  displayname: Build the app
     runs-on: windows-latest
     steps:
       - name: Check out the repository to the runner
         uses: actions/checkout@v4
       - name: pre-requisites Installation
-        run: 
+        run: sudo apt install fortune-mod cowsay -y
+             echo "installation done"
+      - name: run the script
+        run: ./wisecow.sh
+             echo "ran script successfully"
+      - name: upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: wisecow-artifact
         
       
         
