--- a/.github/workflows/qa-pipeline.yml
+++ b/.github/workflows/qa-pipeline.yml
@@ -14,8 +14,9 @@ jobs:
       - name: Check out the repository to the runner
         uses: actions/checkout@v4
       - name: pre-requisites Installation
-        run: sudo apt install fortune-mod cowsay -y
-             echo "installation done"
+        run: |
+            sudo apt install fortune-mod cowsay -y
+            echo "installation done"
       - name: run the script
         run: ./wisecow.sh
              echo "ran script successfully"
