--- a/.github/workflows/qa-pipeline.yml
+++ b/.github/workflows/qa-pipeline.yml
@@ -14,11 +14,13 @@ jobs:
       - name: Check out the repository to the runner
         uses: actions/checkout@v4
       - name: pre-requisites Installation
+        shell: powershell
         run: |
             sudo apt install fortune-mod cowsay -y
             echo "installation done"
       - name: run the script
-        run: ./wisecow.sh
+        run: |
+             ./wisecow.sh
              echo "ran script successfully"
       - name: upload artifact
         uses: actions/upload-artifact@v4
