--- a/.github/workflows/qa-pipeline.yml
+++ b/.github/workflows/qa-pipeline.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Build the app
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Check out the repository to the runner
         uses: actions/checkout@v4
