--- a/.github/workflows/qa-pipeline.yml
+++ b/.github/workflows/qa-pipeline.yml
@@ -14,6 +14,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Docker Login
+        run: |
+          echo "abbasdocpractice" | docker login -u "abbasdocpractice" --password-stdin
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -21,7 +25,6 @@ jobs:
         run: |
           docker build -t abbasdocpractice/docker-practice2:latest .
           docker push abbasdocpractice/docker-practice2:latest
-
 
   deploy:
     name: Deploy to Kubernetes
@@ -40,5 +43,3 @@ jobs:
       - name: Apply Kubernetes manifests
         run: |
           kubectl apply -f path/to/k8s/manifests
-  
-  
