--- a/.github/workflows/qa-pipeline.yml
+++ b/.github/workflows/qa-pipeline.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Configure kubectl
         uses: azure/k8s-set-context@v1
         with:
-          kubeconfig: ${{ secrets.KUBE_CONFIG_DATA }}
+          kubeconfig: "wisecow-deployment.yaml"
   
       - name: Apply Kubernetes manifests
         run: |
