--- a/.github/workflows/qa-pipeline.yml
+++ b/.github/workflows/qa-pipeline.yml
@@ -14,11 +14,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Docker Login
+        run: echo "abbasdocpractice" | docker login -u "abbasdocpractice" --password-stdin
+        
       - name: Build Docker image
         run: |
           docker build -t abbasdocpractice/docker-practice2:latest .
           docker push abbasdocpractice/docker-practice2:latest
-
+          
   deploy:
     name: Deploy to Kubernetes
     needs: build
