--- a/wisecow-deployment.yaml
+++ b/wisecow-deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app: wisecow
     spec:
       containers:
-      - name: eager_austin
+      - name: wisecow
         image: abbasdocpractice/docker-practice2:latest
         ports:
         - containerPort: 4499
